--Cleaned every unnecessary file, --Updated entities based on my database, --Fixed few bugs, --*overall the project is mostly finished, but still does require quite a bit of work and polishing, but other than that it is perfectly fine to be used :)

--- a/app/templates/bug/create.html.twig
+++ b/app/templates/bug/create.html.twig
@@ -2,5 +2,5 @@
     page_title: 'label.create_bug'|trans,
     form: form,
     submit_label: 'action.save'|trans,
-    back_to_list_path: 'task_index',
+    back_to_list_path: 'bug_index',
 } %}
