--- a/app/templates/bug/delete.html.twig
+++ b/app/templates/bug/delete.html.twig
@@ -2,5 +2,5 @@
     page_title: 'label.delete_bug'|trans({'%id%': task.id|default('')}),
     form: form,
     submit_label: 'action.delete'|trans,
-    back_to_list_path: 'task_index',
+    back_to_list_path: 'bug_index',
 } %}
