--- a/app/templates/category/index.html.twig
+++ b/app/templates/category/index.html.twig
@@ -57,7 +57,7 @@
             {{ knp_pagination_render(pagination) }}
             </div>
             <div class="col-2">
-                <a class="btn btn-primary ml-5" href="{{ url('task_index')}}" title="{{ 'action.title.bug_list'|trans }}">
+                <a class="btn btn-primary ml-5" href="{{ url('bug_index')}}" title="{{ 'action.title.bug_list'|trans }}">
                     {{ 'action.title.bug_list'|trans }}
                 </a>
             </div>
