--- a/app/templates/security/login.html.twig
+++ b/app/templates/security/login.html.twig
@@ -37,7 +37,7 @@
         </div>
 </form>
     <div class="col mt-2">
-        <a class="btn btn-outline-primary" href="{{ url('task_index') }}" title="{{ 'action.main_site'|trans }}">
+        <a class="btn btn-outline-primary" href="{{ url('bug_index') }}" title="{{ 'action.main_site'|trans }}">
             {{ 'action.main_site'|trans }}
         </a>
     </div>
