--- a/app/templates/bug/edit.html.twig
+++ b/app/templates/bug/edit.html.twig
@@ -2,5 +2,5 @@
     page_title: 'label.edit_bug'|trans({'%id%': task.id|default('')}),
     form: form,
     submit_label: 'action.save'|trans,
-    back_to_list_path: 'task_index',
+    back_to_list_path: 'bug_index',
 } %}
