--- a/app/templates/user/changeInfo.html.twig
+++ b/app/templates/user/changeInfo.html.twig
@@ -2,5 +2,5 @@
     page_title: 'title.change_info'|trans,
     form: form,
     submit_label: 'action.change_info'|trans,
-    back_to_list_path: 'task_index',
+    back_to_list_path: 'bug_index',
 } %}
