--- a/app/templates/bug/show.html.twig
+++ b/app/templates/bug/show.html.twig
@@ -10,6 +10,8 @@
         <dl class="dl-horizontal ">
             <dt>{{ 'label.id'|trans }}</dt>
             <dd>{{ bug.id }}</dd>
+            <dt>{{ 'label.currentStatus'|trans }}</dt>
+            <dd>{{ bug.status.status }}</dd>
             <dt>{{ 'label.createdAt'|trans }}</dt>
             <dd>{{ bug.createdAt|format_date('long') }}</dd>
             <dt>{{ 'label.updatedAt'|trans }}</dt>
